kyle - complete background jobs using the database

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,8 @@ spring:
   mvc.view:
     prefix: /WEB-INF/
     suffix: .jsp
+  flyway:
+    baseline-on-migrate: true
 
 logging.level:
   root: WARN
